objects/HocSinh__c.object
<CustomObject>
    <fields>
        <fullName>Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HocSinhs</relationshipLabel>
        <relationshipName>HocSinhs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR(TODAY()) -YEAR(DateOfBirth__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>DateOfBirth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiaDiem__c</fullName>
        <label>DiaDiem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diem1__c</fullName>
        <label>Diem1</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diem2__c</fullName>
        <label>Diem2</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diem3__c</fullName>
        <label>Diem3</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiemTB__c</fullName>
        <formula>(  Diem1__c  +  Diem2__c  +  Diem3__c  )  / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DiemTB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GioiTinh__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Nam
Nu</description>
        <label>GioiTinh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoHocSinhs__c</fullName>
        <label>HoHocSinh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LopHoc__c</fullName>
        <label>LopHoc</label>
        <referenceTo>LopHoc__c</referenceTo>
        <relationshipLabel>HocSinhs</relationshipLabel>
        <relationshipName>HocSinhs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MaHocSinh__c</fullName>
        <displayFormat>HD{0000}</displayFormat>
        <label>MaHocSinh</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NgaySinh__c</fullName>
        <label>NgaySinh</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TenHocSinh__c</fullName>
        <label>TenHocSinh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestFormulaText__c</fullName>
        <formula>Name &amp;&quot;,&quot;&amp; TinhTrang__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestFormulaText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TinhTrang__c</fullName>
        <formula>IF( DiemTB__c &gt;= 5 ,  &apos;Dau&apos; ,  &apos;Rot&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TinhTrang</label>
        <type>Text</type>
    </fields>
    <label>HocSinh</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>HocSinh Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HocSinhs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>